--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -85,10 +85,33 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
+  color: var(--black);
+  font-weight: normal;
+  border-bottom: 1px solid var(--black);
+  position: relative;
+  text-decoration: none;
 }
 a:active,
 a:hover {
   outline-width: 0;
+}
+a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--black);
+  visibility: hidden;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out 0s;
+}
+a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 abbr[title] {
   border-bottom: none;
@@ -422,7 +445,7 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 figure {
   margin-left: 0;
@@ -554,6 +577,7 @@ ol li {
 }
 ul li {
   padding-left: 0;
+  list-style: square ;
 }
 li > ol {
   margin-left: 1rem;
